# windowlayout

./: LICENSE  README.md  setup.cfg
src/windowlayout/: __init__.py  __main__.py  switcher.py  window.py
