[metadata]
name = windowlayout
version = 0.0.1
author = mi25iw
description = Manages a layout of windows
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mi25iw/windowlayout
project_urls =
    Bug Tracker = https://github.com/mi25iw/windowlayout/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows :: Windows 10

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pywin32
    psutil

[options.packages.find]
where = src
